# endstone-mediaplayer-ui

./: .gitattributes  .gitignore  README.md  README_ZH.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/endstone_mediaplayer_ui/: __init__.py  plugin.py
